terraform/main.tf
provider "aws" {
  region = "eu-central-1"
}

resource "aws_vpc" "eks_full_stack_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "eks-full-stack-vpc"
  }
}

resource "aws_subnet" "eks_full_stack_subnet" {
  count = 2
  vpc_id                  = aws_vpc.eks_full_stack_vpc.id
  cidr_block              = cidrsubnet(aws_vpc.eks_full_stack_vpc.cidr_block, 8, count.index)
  availability_zone       = element(["eu-central-1a", "eu-central-1b"], count.index)
  map_public_ip_on_launch = true

  tags = {
    Name = "eks-full-stack_subnet-${count.index}"
  }
}

resource "aws_internet_gateway" "eks-full-stack_igw" {
  vpc_id = aws_vpc.eks_full_stack_vpc.id

  tags = {
    Name = "eks-full-stack-igw"
  }
}

resource "aws_route_table" "eks-full-stack_route_table" {
  vpc_id = aws_vpc.eks_full_stack_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.eks-full-stack_igw.id
  }

  tags = {
    Name = "eks-full-stack-route-table"
  }
}

resource "aws_route_table_association" "a" {
  count          = 2
  subnet_id      = aws_subnet.eks_full_stack_subnet[count.index].id
  route_table_id = aws_route_table.eks-full-stack_route_table.id
}

resource "aws_security_group" "eks-full-stack_cluster_sg" {
  vpc_id = aws_vpc.eks_full_stack_vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-full-stack-cluster-sg"
  }
}

resource "aws_security_group" "eks-full-stack_node_sg" {
  vpc_id = aws_vpc.eks_full_stack_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-full-stack-node-sg"
  }
}

resource "aws_eks_cluster" "eks-full-stack" {
  name     = "eks-full-stack-cluster"
  role_arn = aws_iam_role.eks-full-stack_cluster_role.arn

  vpc_config {
    subnet_ids         = aws_subnet.eks_full_stack_subnet[*].id
    security_group_ids = [aws_security_group.eks-full-stack_cluster_sg.id]
  }
}

resource "aws_eks_node_group" "eks-full-stack" {
  cluster_name    = aws_eks_cluster.eks-full-stack.name
  node_group_name = "eks-full-stack-node-group"
  node_role_arn   = aws_iam_role.eks-full-stack_node_group_role.arn
  subnet_ids      = aws_subnet.eks_full_stack_subnet[*].id

  scaling_config {
    desired_size = 2
    max_size     = 3
    min_size     = 2
  }

  instance_types = ["t3.small"]

  remote_access {
    ec2_ssh_key = var.ssh_key_name
    source_security_group_ids = [aws_security_group.eks-full-stack_node_sg.id]
  }

}

resource "aws_iam_role" "eks-full-stack_cluster_role" {
  name = "eks-full-stack-cluster-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
EOF
}

resource "aws_iam_role_policy_attachment" "eks-full-stack_cluster_role_policy" {
  role       = aws_iam_role.eks-full-stack_cluster_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
}

resource "aws_iam_role" "eks-full-stack_node_group_role" {
  name = "eks-full-stack-node-group-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "ec2.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
EOF
}

resource "aws_iam_role_policy_attachment" "eks-full-stack_node_group_role_policy" {
  role       = aws_iam_role.eks-full-stack_node_group_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
}

resource "aws_iam_role_policy_attachment" "eks-full-stack_node_group_cni_policy" {
  role       = aws_iam_role.eks-full-stack_node_group_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
}

resource "aws_iam_role_policy_attachment" "eks-full-stack_node_group_registry_policy" {
  role       = aws_iam_role.eks-full-stack_node_group_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
}
